// Copyright 2017 The Ray Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ray.serve;

option java_package = "io.ray.serve.generated";

option java_outer_classname = "ServeProtos";

option java_multiple_files = true;

// Backend config.
message BackendConfig {
  int32 num_replicas = 1;
  int32 max_concurrent_queries = 2;
  bytes user_config = 3;
  double experimental_graceful_shutdown_wait_loop_s = 4;
  double experimental_graceful_shutdown_timeout_s = 5;
}
